@@ -1,3 +1,13 @@
+2016-09-20  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/plots/__init__.py:
+
+	Added function to return all available mplstyles.
+
+	* doc/pyplots/stylesheet_gallery.py:
+
+	Use newly implemented function to loop over all styles.
+
 2016-09-19  Gerrit Holl  <g.holl@reading.ac.uk>:
 
 	* typhon/datasets/dataset.py(Dataset.combine):
